# glyphic

./: .gitignore  LICENSE  README.md  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: gen-placeholder-icons.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: eps.rs  export.rs  lib.rs  store.rs
src/components/: ColorInput.vue  ColorSection.vue  ContentSection.vue  LogoSection.vue  PreviewPanel.vue  SectionCard.vue  SettingsModal.vue  ShapePicker.vue  ShapeSection.vue  TemplateSection.vue  ToastFlash.vue
src/engine/: body-shapes.ts  content.ts  eye-shapes.ts  fills.ts  geometry.ts  logo.ts  matrix.ts  render.ts  types.ts
src/lib/: exporter.ts  ipc.ts  library-query.ts  logo-mask.ts  raster.ts  shape-previews.ts  theme.ts  toast.ts  validate-style.ts
src/stores/: editor.ts  library.ts  settings.ts
src/views/: CreateView.vue  LibraryView.vue  TemplatesView.vue
tests/engine/: body-shapes.test.ts  content.test.ts  eye-shapes.test.ts  fills.test.ts  geometry.test.ts  logo.test.ts  matrix.test.ts  render.test.ts
tests/helpers/: decode.ts
tests/lib/: library-query.test.ts  raster.test.ts  shape-previews.test.ts  theme.test.ts  validate-style.test.ts
