[package]
name = "app"
version = "0.3.1"
description = "Glyphic — a desktop QR code design studio"
authors = ["Duncan Eddy"]
license = "MIT"
repository = "https://github.com/duncaneddy/glyphic"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
svg2pdf = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
